--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "react-native-gesture-handler": "~2.2.1",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-vector-icons": "^9.2.0",
+    "react-native-video-player": "^0.12.0",
     "react-native-web": "0.17.7",
+    "react-native-webview": "^11.23.0",
+    "react-native-youtube": "^2.0.2",
+    "react-native-youtube-iframe": "^2.2.2",
     "redux": "^4.2.0"
   },
   "devDependencies": {
